[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Ozone"
version = "0.0.1"
authors = [
  { name="KayserSoze42", email="oxiemoron@plaintech.ink" },
]
description = "Python Module for date and time conversion using regex"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KayserSoze42/ozone"